Comment out the h4 title about me

--- a/style/style.scss
+++ b/style/style.scss
@@ -290,11 +290,11 @@ section {
 			padding: 1rem 0.5rem;
 			color: var(--color-grey-1);
 		}
-		h4 {
-			font-size: 2rem;
-			padding: 0 0.5rem;
-			text-transform: uppercase;
-		}
+		//h4 {
+		//	font-size: 2rem;
+		//	padding: 0 0.5rem;
+		//	text-transform: uppercase;
+		//}
 	}
 }
 
