--- a/style/style.scss
+++ b/style/style.scss
@@ -287,7 +287,7 @@ section {
 		padding-right: 5rem;
 		p {
 			line-height: 2rem;
-			padding: 1rem 0.5rem;
+			padding: 0 0.5rem 1rem 0.5rem;
 			color: var(--color-grey-1);
 		}
 		//h4 {
