--- a/style/style.css
+++ b/style/style.css
@@ -384,14 +384,8 @@ section {
 
 .about-container .left-about p {
   line-height: 2rem;
-  padding: 1rem 0.5rem;
+  padding: 0 0.5rem 1rem 0.5rem;
   color: var(--color-grey-1);
-}
-
-.about-container .left-about h4 {
-  font-size: 2rem;
-  padding: 0 0.5rem;
-  text-transform: uppercase;
 }
 
 .about-skills {
